# webapp_telegram_django

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
bot/: admin.py  dispatcher.py  models.py  urls.py  utils.py  views.py
bot/handlers/: start.py
bot/migrations/: 0001_initial.py
bot/services/: users.py
bot/templates/: auth.html  index.html  main.html
core/: env.py  settings.py  urls.py
static/js/: api.js  telegram.js  telegram_auth.js
templates/: base.html
