[project]
name = "mimir"
version = "0.1.0"
description = "MVP Telegram mini WebApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "gunicorn>=23.0.0,<24.0.0",
    "uvicorn>=0.36.0,<0.37.0",
]
